# txtformat

./: CMakeLists.txt  README.md
include/: txtformat.h
src/: CMakeLists.txt  main.cpp  txtformat.cpp
